Bug 1192666 - Emit '[]' around origin strings for ipv6 origins. r=ehsan, a=sledru